--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=utf-8 />
     <title>Layout</title>
-
+	<link rel="stylesheet" href="bootstrap.min.css">
     <style>
         .container {
             width: 80vw;
@@ -19,13 +19,13 @@
 
         header,
         footer {
-            height: 30px;
-            background-color: #ffc;
+            height: 60px;
+
         }
 
         main {
             flex: 1;
-            border: 1px solid #ddd;
+
         }
     </style>
 </head>
@@ -34,7 +34,31 @@
     <div class="container">
         <div class="wrapper">
             <header>I'm a 30px tall header</header>
-            <main>I'm the main-content filling the void!</main>
+            <main>
+			
+				<div class="card">
+				  <div class="card-header">
+					Project-1
+				  </div>
+				  <div class="card-body">
+					<h5 class="card-title">Special title treatment</h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+
+					<div class="card">
+				  <div class="card-header">
+					Project-2
+				  </div>
+				  <div class="card-body">
+					<h5 class="card-title">Special title treatment</h5>
+					<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>			
+				
+			</main>
             <footer>I'm a 30px tall footer</footer>
         </div>
     </div>
